grsec: Apply grsecurity-2.9.1-2.6.32.61-201311102303.patch
commit 8e10154c0d9d1f633af0f4963cea20b90ad00dee
Author: Brad Spengler <spender@grsecurity.net>
Date:   Sun Nov 10 15:19:27 2013 -0500

    On ARM (and other arches) we were defaulting mmap_min_addr to 64K if the LSM-based mmap_min_addr
    was disabled in config.  This caused non-root execs to fail in some cases (via SIGKILL during ELF
    loading).  Fix this by setting a proper default on these architectures like set on the LSM-based
    mmap_min_addr.

    Thanks to acez from IRC for debugging.

    Conflicts:

    	mm/Kconfig

 mm/Kconfig |    5 +++--
 1 files changed, 3 insertions(+), 2 deletions(-)

Signature-tree: 658da33f83c547e40b2caa3e7350223c92e2bda7

--- a/mm/Kconfig
+++ b/mm/Kconfig
@@ -228,8 +228,9 @@ config KSM
 config DEFAULT_MMAP_MIN_ADDR
         int "Low address space to protect from user allocation"
 	depends on MMU
-        default 65536
-        help
+	default 32768 if ALPHA || ARM || PARISC || SPARC32
+	default 65536
+	help
 	  This is the portion of low virtual memory which should be protected
 	  from userspace allocation.  Keeping a user from writing to low pages
 	  can help reduce the impact of kernel NULL pointer bugs.
