--- a/arch/arm/mm/Kconfig
+++ b/arch/arm/mm/Kconfig
@@ -801,7 +801,7 @@ config NEED_KUSER_HELPERS
 config KUSER_HELPERS
 	bool "Enable kuser helpers in vector page" if !NEED_KUSER_HELPERS
 	default y
-	depends on !(CPU_V6 || CPU_V6K || CPU_V7)
+	depends on !(CPU_V6 || CPU_V6K || CPU_V7) || GRKERNSEC_OLD_ARM_USERLAND
 	help
 	  Warning: disabling this option may break user programs.
 
